--- a/pc/ecore-cocoa.pc.in
+++ b/pc/ecore-cocoa.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_cocoa@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_cocoa
 Libs.private: @requirements_libs_ecore_cocoa@
-Cflags: -I${includedir}/ecore-cocoa-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-cocoa-@VMAJ@
