--- a/pc/ecore-con.pc.in
+++ b/pc/ecore-con.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_con@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_con
 Libs.private: @requirements_libs_ecore_con@
-Cflags: -I${includedir}/ecore-con-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-con-@VMAJ@
