--- a/pc/ecore-evas.pc.in
+++ b/pc/ecore-evas.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_evas@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_evas
 Libs.private: @requirements_libs_ecore_evas@
-Cflags: -I${includedir}/ecore-evas-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-evas-@VMAJ@
