--- a/pc/ecore-imf.pc.in
+++ b/pc/ecore-imf.pc.in
@@ -10,4 +10,4 @@ Description: E core library, IMF module
 Version: @VERSION@
 Requires.private: @requirements_pc_ecore_imf@
 Libs: -L${libdir} -lecore_imf
-Cflags: -I${includedir}/ecore-imf-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-imf-@VMAJ@
