--- a/pc/ecore-input.pc.in
+++ b/pc/ecore-input.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_input@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_input
 Libs.private: @requirements_libs_ecore_input@
-Cflags: -I${includedir}/ecore-input-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-input-@VMAJ@
