--- a/pc/ecore-psl1ght.pc.in
+++ b/pc/ecore-psl1ght.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_psl1ght@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_psl1ght
 Libs.private: @requirements_libs_ecore_psl1ght@
-Cflags: -I${includedir}/ecore-psl1ght-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-psl1ght-@VMAJ@
