--- a/pc/ecore-win32.pc.in
+++ b/pc/ecore-win32.pc.in
@@ -9,4 +9,4 @@ Requires.private: @requirements_pc_ecore_win32@
 Version: @VERSION@
 Libs: -L${libdir} -lecore_win32
 Libs.private: @requirements_libs_ecore_win32@
-Cflags: -I${includedir}/ecore-win32-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/ecore-win32-@VMAJ@
