--- a/pc/eet.pc.in
+++ b/pc/eet.pc.in
@@ -9,4 +9,4 @@ Version: @VERSION@
 Requires.private: @requirements_pc_eet@
 Libs: -L${libdir} -leet
 Libs.private: @requirements_libs_eet@
-Cflags: -I${includedir}/eet-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/eet-@VMAJ@
