--- a/pc/efreet-mime.pc.in
+++ b/pc/efreet-mime.pc.in
@@ -8,4 +8,4 @@ Description: Freedesktop Shared Mime Info standard implementation for the EFL
 Version: @VERSION@
 Requires.private: @requirements_pc_efreet@
 Libs: -L${libdir} -lefreet_mime
-Cflags: -I${includedir}/efreet-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/efreet-@VMAJ@
