--- a/pc/efreet.pc.in
+++ b/pc/efreet.pc.in
@@ -8,4 +8,4 @@ Description: Freedesktop standards implementation for the EFL
 Version: @VERSION@
 Requires.private: @requirements_pc_efreet@
 Libs: -L${libdir} -lefreet
-Cflags: -I${includedir}/efreet-@VMAJ@
+Cflags: -I${includedir}/efl-@VMAJ@ -I${includedir}/efreet-@VMAJ@
