--- a/src/lib/efl/Efl_Config.h.in
+++ b/src/lib/efl/Efl_Config.h.in
@@ -13,4 +13,7 @@
 /* @EFL_API_EO_DEF@ */
 #endif
 
+#define EFL_VERSION_MAJOR @EFL_VERSION_MAJOR@
+#define EFL_VERSION_MINOR @EFL_VERSION_MINOR@
+
 #endif
