Add "--with-id" configure option that can be used to specify a string identifying the build (vendor, maintainer, etc). It defines EFL_BUILD_ID with default to "none". It can be used by applications or for bug reports by including Efl_Config.h
Differential Revision: https://phab.enlightenment.org/D288

--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,16 @@ AC_SUBST(EFL_API_EO_DEF)
 
 #### Additional options to configure
 
+# string to identify the build
+AC_ARG_WITH([id],
+   [AC_HELP_STRING([--with-id=BUILD_ID],
+                   [Specify a string to identify the build (vendor, maintainer, etc).
+                     @<:@default=none@:>@])],
+   [EFL_BUILD_ID="${withval}"],
+   [EFL_BUILD_ID="none"])
+AC_SUBST(EFL_BUILD_ID)
+
+# profile
 AC_ARG_WITH([profile],
    [AC_HELP_STRING([--with-profile=PROFILE],
                    [use the predefined build profile, one of: dev, debug and release.
