--- a/src/lib/efl/Efl_Config.h.in
+++ b/src/lib/efl/Efl_Config.h.in
@@ -15,5 +15,6 @@
 
 #define EFL_VERSION_MAJOR @EFL_VERSION_MAJOR@
 #define EFL_VERSION_MINOR @EFL_VERSION_MINOR@
+#define EFL_BUILD_ID "@EFL_BUILD_ID@"
 
 #endif
