--- a/src/lib/eina/eina_config.h.in
+++ b/src/lib/eina/eina_config.h.in
@@ -97,4 +97,8 @@
 #endif
 @EINA_CONFIGURE_HAVE_POSIX_SPINLOCK@
 
+#if (defined(__x86_64__) || defined(__x86_64) || defined(__amd64__) || defined(__amd64) || defined(__ppc64__) || defined(_WIN64) || defined(__LP64__) || defined(_LP64))
+# define EFL64
+#endif
+
 #endif /* EINA_CONFIG_H_ */
