Fix build issues on Mac OS X due to sh differences.
Summary:
  * efl.m4: add support for xterm-256color and fix display for the bsd echo. Fix autotools issue (present on Ubuntu also, but better handled).
  * doc/Makefile.am: bsd echo may not handle -n option in sh

Reviewers: cedric

CC: cedric, seoz

Differential Revision: https://phab.enlightenment.org/D329

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -54,7 +54,7 @@ include images.mk
 
 all-local:
 	@rm -f images.tmp; \
-	echo $(ECHO_N) 'EXTRA_DIST += ' > images.tmp; \
+	echo 'EXTRA_DIST += \\' > images.tmp; \
 	(cd $(srcdir) && find ./img -type f -print | cut -d/ -f2- | grep -v '~' | sort | tr '\n' ' ') >> images.tmp && \
 	echo >> images.tmp && \
 	if ! cmp "$(srcdir)/images.mk" images.tmp >/dev/null; then \
