--- a/cmakeconfig/EdjeConfig.cmake.in
+++ b/cmakeconfig/EdjeConfig.cmake.in
@@ -4,6 +4,7 @@
 #  EDJE_INCLUDE_DIRS - The edje include directories
 #  EDJE_LIBRARIES - The libraries needed to use edje
 #  EDJE_DEFINITIONS - Compiler switches required for using edje
+#  EDJE_CC_EXECUTABLE - full path to the `edje_cc' program.
 
 set(MY_PKG edje)
 
@@ -16,7 +17,10 @@ pkg_check_modules(PC_LIBEDJE ${_QUIET} ${MY_PKG})
 
 find_library(EDJE_LIBRARY
              NAMES ${PC_LIBEDJE_LIBRARIES}
-             HINTS ${PC_LIBEDJE_LIBDIR} ${PC_LIBEDJE_LIBRARY_DIRS} )
+             HINTS ${PC_LIBEDJE_LIBDIR} ${PC_LIBEDJE_LIBRARY_DIRS})
+
+find_program(EDJE_CC_EXECUTABLE
+             NAMES edje_cc)
 
 set(EDJE_DEFINITIONS ${PC_LIBEDJE_CFLAGS_OTHER})
 set(EDJE_LIBRARIES ${EDJE_LIBRARY})
@@ -28,5 +32,5 @@ include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(${MY_PKG} DEFAULT_MSG
    EDJE_LIBRARIES EDJE_INCLUDE_DIRS)
 
-mark_as_advanced(EDJE_INCLUDE_DIRS EDJE_LIBRARY EDJE_LIBRARIES EDJE_DEFINITIONS)
+mark_as_advanced(EDJE_INCLUDE_DIRS EDJE_LIBRARY EDJE_LIBRARIES EDJE_DEFINITIONS EDJE_CC_EXECUTABLE)
 
