--- a/src/Makefile_Ecore_Evas.am
+++ b/src/Makefile_Ecore_Evas.am
@@ -13,6 +13,7 @@ lib/ecore_evas/ecore_evas.c \
 lib/ecore_evas/ecore_evas_buffer.c \
 lib/ecore_evas/ecore_evas_buffer.h \
 lib/ecore_evas/ecore_evas_deprecated.c \
+lib/ecore_evas/ecore_evas_drm.h \
 lib/ecore_evas/ecore_evas_ews.c \
 lib/ecore_evas/ecore_evas_module.c \
 lib/ecore_evas/ecore_evas_private.h \
