Tests: fix the print summary for tests with dev profile.
When the dev profile is enabled, tests are also enabled if
libcheck is found. Fix the print in the summary to reflect
that.

--- a/configure.ac
+++ b/configure.ac
@@ -3908,6 +3908,8 @@ echo "Ethumb..........: yes"
 echo "Ethumb_Client...: yes"
 if test "${build_tests}" = "none"; then
 echo "Tests...........: no"
+elif test "${build_tests}" = "auto"; then
+echo "Tests...........: make check (inexplicitly enabled)"
 elif test "${build_tests}" = "regular"; then
 echo "Tests...........: make check"
 elif test "${build_tests}" = "coverage"; then
