Adding galician and spanish translations in desktop files

--- a/src/tests/efreet/data/test.desktop
+++ b/src/tests/efreet/data/test.desktop
@@ -3,11 +3,15 @@ Encoding=UTF-8
 Type=Application
 Name=Efreet Test Application
 Name[eo]=Provoversia aplikaĵo de Efreet
+Name[es]=Aplicación de prueba de Efree
 Name[fr]=Application test pour Efreet
+Name[gl]=Aplicativo de proba de Efreet
 Name[it]=Applicazione di test per Efreet
 GenericName=Test Application
 GenericName[eo]=Provoversia aplikaĵo
+GenericName[es]=Aplicación de prueba
 GenericName[fr]=Application test
+GenericName[gl]=Aplicativo de proba
 GenericName[it]=Applicazione di test
 Icon=TestIcon
 Exec=efreet_test %F %i
