Evas tests: Add canvas free with ref tests.
This should check test for the issue fixed in:
bb4a19b5ad6a8fc6720154700aabfa32f4b71244
8bba92fbca7c721a7582b098698404e491f44941

--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -1582,6 +1582,7 @@ TESTS += tests/evas/evas_suite
 tests_evas_evas_suite_SOURCES = \
 tests/evas/evas_suite.c \
 tests/evas/evas_test_init.c \
+tests/evas/evas_test_object.c \
 tests/evas/evas_test_textblock.c \
 tests/evas/evas_test_text.c \
 tests/evas/evas_test_callbacks.c \
