Fix Makefile.am to add evas-drm.pc and ecore-drm.pc files
Signed-off-by: Chris Michael <cp.michael@samsung.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -187,8 +187,16 @@ if BUILD_ENGINE_WAYLAND_EGL
 pkgconfig_DATA += pc/evas-wayland-egl.pc
 endif
 
+if BUILD_ENGINE_DRM
+pkgconfig_DATA += pc/evas-drm.pc
+endif
+
 if HAVE_ECORE_COCOA
 pkgconfig_DATA += pc/ecore-cocoa.pc
+endif
+
+if HAVE_ECORE_DRM
+pkgconfig_DATA += pc/ecore-drm.pc
 endif
 
 if HAVE_ECORE_FB
