Fix Ecore_Drm Makefile to install slave process
This fixes the Ecore_Drm Makefile to install the ecore_drm_launch
slave process into a directory using MODULE_ARCH

Signed-off-by: Chris Michael <cp.michael@samsung.com>

--- a/src/Makefile_Ecore_Drm.am
+++ b/src/Makefile_Ecore_Drm.am
@@ -6,7 +6,7 @@ lib_LTLIBRARIES += lib/ecore_drm/libecore_drm.la
 
 installed_ecoredrmmainheadersdir = $(includedir)/ecore-drm-@VMAJ@
 dist_installed_ecoredrmmainheaders_DATA = \
-lib/ecore_drm/Ecore_Drm.h
+  lib/ecore_drm/Ecore_Drm.h
 
 lib_ecore_drm_libecore_drm_la_SOURCES = \
 lib/ecore_drm/ecore_drm.c \
@@ -15,7 +15,9 @@ lib/ecore_drm/ecore_drm_private.h
 lib_ecore_drm_libecore_drm_la_CPPFLAGS = \
   -I$(top_builddir)/src/lib/efl \
   @ECORE_DRM_CFLAGS@ \
-  -DPACKAGE_BIN_DIR=\"$(bindir)\"
+  -DPACKAGE_LIB_DIR=\"$(libdir)\" \
+  -DMODULE_ARCH=\"$(MODULE_ARCH)\"
+
 lib_ecore_drm_libecore_drm_la_LIBADD = @ECORE_DRM_LIBS@
 lib_ecore_drm_libecore_drm_la_DEPENDENCIES = @ECORE_DRM_INTERNAL_LIBS@
 lib_ecore_drm_libecore_drm_la_LDFLAGS = @EFL_LTLIBRARY_FLAGS@
@@ -31,7 +33,8 @@ bin_ecore_drm_ecore_drm_launch_SOURCES = \
 bin_ecore_drm_ecore_drm_launch_CPPFLAGS = \
   -I$(top_builddir)/src/lib/efl \
   @ECORE_DRM_CFLAGS@ @SUID_CFLAGS@ \
-  -DPACKAGE_LIB_DIR=\"$(libdir)\"
+  -DPACKAGE_LIB_DIR=\"$(libdir)\" \
+  -DMODULE_ARCH=\"$(MODULE_ARCH)\"
 
 bin_ecore_drm_ecore_drm_launch_LDADD = \
   @ECORE_DRM_INTERNAL_LIBS@ \
@@ -41,6 +44,6 @@ bin_ecore_drm_ecore_drm_launch_DEPENDENCIES = \
   @ECORE_DRM_INTERNAL_LIBS@
 
 setuid_root_mode = a=rx,u+xs
-EFL_INSTALL_EXEC_HOOK += @chmod $(setuid_root_mode) $(DESTDIR)$(libdir)/ecore_drm/bin/ecore_drm_launch$(EXEEXT) || true;
+EFL_INSTALL_EXEC_HOOK += @chmod $(setuid_root_mode) $(DESTDIR)$(libdir)/ecore_drm/bin/$(MODULE_ARCH)/ecore_drm_launch$(EXEEXT) || true;
 
 endif
