--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -364,6 +364,18 @@ lib/evas/common/evas_op_sub/op_sub_pixel_mask_.c \
 lib/evas/common/evas_op_sub/op_sub_pixel_mask_i386.c
 
 
+### Evas filters
+
+lib_evas_libevas_la_SOURCES += lib/evas/filters/evas_filter.c \
+lib/evas/filters/evas_filter_blend.c \
+lib/evas/filters/evas_filter_blur.c \
+lib/evas/filters/evas_filter_bump.c \
+lib/evas/filters/evas_filter_curve.c \
+lib/evas/filters/evas_filter_displace.c \
+lib/evas/filters/evas_filter_mask.c \
+lib/evas/filters/evas_filter_parser.c
+
+
 ### Engines
 
 if EVAS_STATIC_BUILD_SOFTWARE_GENERIC
