autotools: let's try this variant for detecting c++ compiler availability.

--- a/configure.ac
+++ b/configure.ac
@@ -287,7 +287,7 @@ fi
 # autotools macro and CXX is always set to g++ even if
 # it's not found. So we are using an internal variable
 # that does the work for now, may get broken in the future.
-if test "x${ac_ct_CXX}" = "x"; then
+if test "x${ac_ct_CXX}" = "x" -a "x${CXX}" = "xg++"; then
    AC_MSG_ERROR([efl requires a C++ compiler got ${ac_ct_CXX} and ${CXX}.])
 fi
 
