--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -75,6 +75,7 @@ lib/evas/canvas/evas_object_grid.c \
 lib/evas/canvas/evas_font_dir.c \
 lib/evas/canvas/evas_rectangle.c \
 lib/evas/canvas/evas_render.c \
+lib/evas/canvas/evas_render2.c \
 lib/evas/canvas/evas_smart.c \
 lib/evas/canvas/evas_stack.c \
 lib/evas/canvas/evas_async_events.c \
