emotion: initial port of emotion to GStreamer 1.0
Some commits to port emotion to GStreamer 1.0 and implement some missing features,
clean up code a bit and fix some bugs on the way.

This works as good as the 0.10 code for me now with the emotion examples,
just the Samsung hardware specific code is commented out. This should be
ported by someone who has such hardware, and also in a clean way now that
GStreamer since 1.0 has features to handle all this properly.

There's still a lot of potential to clean things up and fix many bugs, and also
to implement zerocopy rendering. But those are for later if there's actual
interest in this at all.

Commits:

- Update configure checks and ecore example to GStreamer 1.0
- Initial port of emotion to GStreamer 1.0
- Samsung specific code commented out, should be ported by someone
with the hardware.
- Return GST_FLOW_FLUSHING when the sink is unlocked
- Remove unused GSignal from the sink
- Use GstVideoInfo to store the format details inside the sink
- Add support for pixel-aspect-ratio
- Store video format information in GstVideoInfo for the different video streams
- Use GstAudioInfo to store the audio format information
- Remove some unused defines
- Header cleanup
- Implement initial support for GstNavigation interface
- Implement setting of audio/video channel

Reviewers: cedric

CC: cedric

Differential Revision: https://phab.enlightenment.org/D387

Signed-off-by: Cedric BAIL <cedric.bail@samsung.com>

--- a/src/Makefile_Emotion.am
+++ b/src/Makefile_Emotion.am
@@ -52,7 +52,7 @@ modules_emotion_xine_module_la_LIBTOOLFLAGS = --tag=disable-static
 endif
 endif
 
-# Gstreamer
+# Gstreamer 0.10
 EMOTION_GSTREAMER_SOURCES = \
 modules/emotion/gstreamer/emotion_gstreamer.h \
 modules/emotion/gstreamer/emotion_gstreamer.c \
@@ -81,6 +81,39 @@ if HAVE_ECORE_X
 modules_emotion_gstreamer_module_la_CPPFLAGS += @ECORE_X_CFLAGS@ @ECORE_EVAS_CFLAGS@
 modules_emotion_gstreamer_module_la_LIBADD += @USE_ECORE_X_LIBS@ @USE_ECORE_EVAS_LIBS@
 modules_emotion_gstreamer_module_la_DEPENDENCIES += @USE_ECORE_X_INTERNAL_LIBS@ @USE_ECORE_EVAS_INTERNAL_LIBS@
+endif
+endif
+endif
+
+# Gstreamer 1.0
+EMOTION_GSTREAMER1_SOURCES = \
+modules/emotion/gstreamer1/emotion_gstreamer.h \
+modules/emotion/gstreamer1/emotion_gstreamer.c \
+modules/emotion/gstreamer1/emotion_alloc.c \
+modules/emotion/gstreamer1/emotion_convert.c \
+modules/emotion/gstreamer1/emotion_fakeeos.c \
+modules/emotion/gstreamer1/emotion_sink.c
+
+if EMOTION_STATIC_BUILD_GSTREAMER1
+lib_emotion_libemotion_la_SOURCES += $(EMOTION_GSTREAMER1_SOURCES)
+else
+if EMOTION_BUILD_GSTREAMER1
+emotionmodulegstreamer1dir = $(libdir)/emotion/modules/gstreamer1/$(MODULE_ARCH)
+emotionmodulegstreamer1_LTLIBRARIES = modules/emotion/gstreamer1/module.la
+modules_emotion_gstreamer1_module_la_SOURCES = $(EMOTION_GSTREAMER1_SOURCES)
+modules_emotion_gstreamer1_module_la_CPPFLAGS = -I$(top_builddir)/src/lib/efl \
+@EMOTION_CFLAGS@ \
+@EMOTION_MODULE_GSTREAMER1_CFLAGS@
+modules_emotion_gstreamer1_module_la_LIBADD = \
+@USE_EMOTION_LIBS@ \
+@EMOTION_MODULE_GSTREAMER1_LIBS@
+modules_emotion_gstreamer1_module_la_DEPENDENCIES = @USE_EMOTION_INTERNAL_LIBS@
+modules_emotion_gstreamer1_module_la_LDFLAGS = -module @EFL_LTMODULE_FLAGS@
+modules_emotion_gstreamer1_module_la_LIBTOOLFLAGS = --tag=disable-static
+if HAVE_ECORE_X
+modules_emotion_gstreamer1_module_la_CPPFLAGS += @ECORE_X_CFLAGS@ @ECORE_EVAS_CFLAGS@
+modules_emotion_gstreamer1_module_la_LIBADD += @USE_ECORE_X_LIBS@ @USE_ECORE_EVAS_LIBS@
+modules_emotion_gstreamer1_module_la_DEPENDENCIES += @USE_ECORE_X_INTERNAL_LIBS@ @USE_ECORE_EVAS_INTERNAL_LIBS@
 endif
 endif
 endif
