--- a/src/examples/ecore/Makefile.examples
+++ b/src/examples/ecore/Makefile.examples
@@ -1,6 +1,13 @@
 CC=gcc
+
+if HAVE_GSTREAMER_1
+  GSTREAMER_DEP="gstreamer-1.0"
+else
+  GSTREAMER_DEP="gstreamer-0.10"
+endif
+
 COMMON_FLAGS=`pkg-config --libs --cflags eina,ecore,evas,ecore-evas,ecore-audio,ecore-con,ecore-file, \
-             eo,evas-software-buffer,gnutls,ecore-imf,ecore-imf-evas,gstreamer-0.10` -lm
+             eo,evas-software-buffer,gnutls,ecore-imf,ecore-imf-evas,$(GSTREAMER_DEP)` -lm
 
 EXAMPLES= ecore_animator_example \
           ecore_audio_custom \
